# Aether

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FAIL  LICENSE  README.md  SECURITY.md  a.out.c  a.out.s  a.s  aether_stage1  aetherc  aetherc_debug  aetherc_debug2  aetherc_debug3  aetherc_debug4  aetherc_native  benchmark_results.txt  bootstrap_compiler  build_native.sh  debug_main  fix_aggressive.sh  fix_bootstrap.sh  gen_bootstrap.sh  hello.ae  main  optimize_extreme.s  real_bench.aether  real_bench_aether  real_bench_c  real_bench_go  real_bench_ultimate  showcase  stage1.aether  stage1_full.aether  tak_test  test_energy.ae  test_energy_proof.ae  (+20 more)
.github/: FUNDING.yml
aether-compiler/: Cargo.toml
aether-compiler/src/: ast.rs  borrowck.rs  lexer.rs  main.rs  parser.rs  runtime.rs  stdlib.rs  typechecker.rs
aether-compiler/src/binary/: elf.rs  macho.rs  mod.rs  pe.rs
aether-compiler/src/codegen/: arm64.rs  llvm.rs  mod.rs  x86_64.rs
aether-compiler/src/tooling/: apm.rs  lsp.rs  mod.rs
aether_web/: aether.toml
benchmarks/: AETHER_SCORECARD.md  HONEST_RESULTS.md  bench.aether  bench.c  bench.cpp  bench.go  bench.rs  bench.zig  bench_aether  bench_aether.ll  bench_aether.s  bench_aether_bin  bench_aether_clang  bench_aether_llvm.ll  bench_aether_opt  bench_c  bench_cpp  bench_go  bench_llvm.ll  bench_llvm_opt  bench_rust  bench_zig  concurrent_100.aether  concurrent_100.ll  concurrent_100_bin  concurrent_aether.aether  concurrent_aether.ll  concurrent_aether_bin  concurrent_stress.c  concurrent_stress.go  concurrent_stress.rs  (+87 more)
(+383 files in other folders)
